--- a/TODO
+++ b/TODO
@@ -1,6 +1,4 @@
-0.添加下载器配置检测
-1.绿色版/修改版迅雷支持
-2.Json初始化错误
-3.https://github.com/yhnmj6666/NewThunderCross/issues/1 最后一次下载的文件重新弹出
-4.添加网页视频检测支持
-5.右键菜单
+1.自定义下载器
+2.绿色版/修改版迅雷支持
+3.添加网页视频检测支持
+4.右键菜单
