--- a/ThunderCross/ThunderCross/Strings.resx
+++ b/ThunderCross/ThunderCross/Strings.resx
@@ -130,6 +130,10 @@
   <data name="Default" xml:space="preserve">
     <value>Default</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Image1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Image1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Install" xml:space="preserve">
     <value>Install?</value>
   </data>
