--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
-1.自定义下载器
-2.绿色版/修改版迅雷支持
-3.添加网页视频检测支持
-4.右键菜单
+-1.支持百度云新接口(记录302,拦截200,传递302)
+0.富规则(什么网站什么后缀用什么操作)
+1.自定义下载器(+IDM,+Aria2)
+2.国际化
+3.右键菜单
+4.添加网页视频检测支持
