fix a dll missing for release

--- a/ThunderCross/ThunderCross/Strings.resx
+++ b/ThunderCross/ThunderCross/Strings.resx
@@ -166,4 +166,7 @@
   <data name="You_have_choosen_to_open" xml:space="preserve">
     <value>You have choosen to open:</value>
   </data>
+  <data name="Only_for_this_site" xml:space="preserve">
+    <value>Only for this site.</value>
+  </data>
 </root>
