--- a/ThunderCross/ThunderCross/Strings.zh-Hant.resx
+++ b/ThunderCross/ThunderCross/Strings.zh-Hant.resx
@@ -118,51 +118,57 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Call_Thunder_Error_Agent" xml:space="preserve">
-    <value>迅雷调用失败！请确保ThunderAgent已经正确注册。</value>
+    <value>迅雷調用失敗！請檢查 ThunderAgent 是否已經正確註冊。</value>
   </data>
   <data name="Cancel" xml:space="preserve">
     <value>取消</value>
   </data>
   <data name="Download_in_Firefox" xml:space="preserve">
-    <value>在浏览器中打开</value>
+    <value>在瀏覽器中開啟</value>
   </data>
   <data name="Download_using_" xml:space="preserve">
-    <value>使用下载器</value>
+    <value>使用下載工具</value>
   </data>
   <data name="Do_this_automatically_for_files_like_this_from_now_on" xml:space="preserve">
-    <value>以后自动采用相同的动作处理此类文件。</value>
+    <value>以後自動採用相同的動作處理此類型的檔案。</value>
   </data>
   <data name="From" xml:space="preserve">
-    <value>来源：</value>
+    <value>來源：</value>
   </data>
   <data name="Install" xml:space="preserve">
-    <value>是否安装？</value>
+    <value>是否安裝？</value>
   </data>
   <data name="Install_fail" xml:space="preserve">
-    <value>安装失败！请确保火狐浏览器已经正确安装。</value>
+    <value>安裝失敗！請檢查火狐瀏覽器是否已經正確安裝。</value>
   </data>
   <data name="Install_successful" xml:space="preserve">
-    <value>安装成功</value>
+    <value>安裝成功</value>
   </data>
   <data name="Permission_Error" xml:space="preserve">
-    <value>权限错误</value>
+    <value>權限錯誤</value>
   </data>
   <data name="Uninstall" xml:space="preserve">
-    <value>是否卸载？</value>
+    <value>是否移除？</value>
   </data>
   <data name="Uninstall_success" xml:space="preserve">
-    <value>卸载完成。</value>
+    <value>移除完成。</value>
   </data>
   <data name="What_should_ThunderCross_do_with_this_file" xml:space="preserve">
-    <value>你想要ThunderCross如何处理此文件？</value>
+    <value>你想要 ThunderCross 如何處理此檔案？</value>
   </data>
   <data name="Which_is" xml:space="preserve">
-    <value>文件类型：</value>
+    <value>檔案類型：</value>
   </data>
   <data name="You_have_choosen_to_open" xml:space="preserve">
-    <value>您选择了打开：</value>
+    <value>您選擇了開啟：</value>
   </data>
   <data name="Only_for_this_site" xml:space="preserve">
-    <value>仅针对此网站</value>
+    <value>僅針對此網站</value>
+  </data>
+  <data name="Failed" xml:space="preserve">
+    <value>Failed</value>
+  </data>
+  <data name="Ready" xml:space="preserve">
+    <value>Ready</value>
   </data>
 </root>
