baiduyun fix jumping to blank page fix add rules.html

--- a/ThunderCross/ThunderCross/Strings.zh-Hant.resx
+++ b/ThunderCross/ThunderCross/Strings.zh-Hant.resx
@@ -166,9 +166,9 @@
     <value>僅針對此網站</value>
   </data>
   <data name="Failed" xml:space="preserve">
-    <value>Failed</value>
+    <value>失敗</value>
   </data>
   <data name="Ready" xml:space="preserve">
-    <value>Ready</value>
+    <value>就绪</value>
   </data>
 </root>
