--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -37,6 +37,12 @@
     "Show_In_Center":{
         "message":" Show form in center."
     },
+    "Replace_default_with_direct_download":{
+        "message":" Replace default with direct download."
+    },
+    "Replace_hint":{
+        "message":"If checked, ThunderCross will add download directly other than let Firefox asking you again."
+    },
     "Save": {
         "message": "Save"
     },
