--- a/_locales/zh-tw/messages.json
+++ b/_locales/zh-tw/messages.json
@@ -5,6 +5,9 @@
         "message": "新一代迅雷召喚工具"
     },
     //options.html
+    "Checking_Version": {
+        "message": "检查客户端版本..."
+    },
     "Wanted_Extension": {
         "message": "需要監視下載的副檔名"
     },
@@ -52,6 +55,9 @@
     },
     "Restore_Default_Settings": {
         "message": "恢復默認設置"
+    },
+    "Advanced_Download_Ruleset_Configuration":{
+        "message": "下载规则的详细设置"
     },
     //option.js
     "Native_Client_Version": {
