--- a/ThunderCross/ThunderCross/Strings.zh-CN.resx
+++ b/ThunderCross/ThunderCross/Strings.zh-CN.resx
@@ -144,9 +144,6 @@
   <data name="Install_successful" xml:space="preserve">
     <value>安装成功</value>
   </data>
-  <data name="Permission_Error" xml:space="preserve">
-    <value>权限错误</value>
-  </data>
   <data name="Uninstall" xml:space="preserve">
     <value>是否卸载？</value>
   </data>
@@ -162,8 +159,8 @@
   <data name="You_have_choosen_to_open" xml:space="preserve">
     <value>您选择了打开：</value>
   </data>
-  <data name="Only_for_this_site" xml:space="preserve">
-    <value>仅针对此网站</value>
+  <data name="Only_for" xml:space="preserve">
+    <value>仅针对</value>
   </data>
   <data name="Ready" xml:space="preserve">
     <value>就绪</value>
