--- a/_locales/zh-tw/messages.json
+++ b/_locales/zh-tw/messages.json
@@ -65,5 +65,43 @@
     },
     "Native_Client_not_Installed_Properly": {
         "message": "用戶端並未正確安裝。"
+    },
+    //rules.html
+    "Accept_or_Deny":
+    {
+        "message":"Accept or Deny"
+    },
+    "Extension":
+    {
+        "message":"Extension"
+    },
+    "MIME_type":
+    {
+        "message":"MIME-type"
+    },
+    "Host":
+    {
+        "message":"Host"
+    },
+    "Operation":
+    {
+        "message":"Operation"
+    },
+    //rules.js
+    "accept":
+    {
+        "message":"accept"
+    },
+    "deny":
+    {
+        "message":"deny"
+    },
+    "ask":
+    {
+        "message":"ask"
+    },
+    "delete":
+    {
+        "message":"delete"
     }
 }
