show extension version in options.html

--- a/ThunderCross/ThunderCross/Strings.zh-TW.resx
+++ b/ThunderCross/ThunderCross/Strings.zh-TW.resx
@@ -169,7 +169,7 @@
   <data name="Fixing" xml:space="preserve">
     <value>修復迅雷關聯</value>
   </data>
-  <data name="browser" xml:space="preserve">
+  <data name="browse" xml:space="preserve">
     <value>瀏覽...</value>
   </data>
   <data name="This_copy_of_Thunder_supports_32_bit_only" xml:space="preserve">
