--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -23,6 +23,9 @@
     "Customized": {
         "message": "Customized"
     },
+    "Entry_name":{
+        "message": "Name: "
+    },
     "Executable_file": {
         "message": "Executable file: "
     },
